--- a/man/Makefile
+++ b/man/Makefile
@@ -7,7 +7,7 @@ fields.md:
 	echo "?fields md" >  gen_field_help
 	echo "quit"       >> gen_field_help
 	touch empty.c
-	cat gen_field_help | clang-mutate -interactive -silent empty.c -- > $@
+	cat gen_field_help |../clang-mutate -interactive -silent empty.c -- > $@
 	rm empty.c gen_field_help
 
 clang-mutate.md: clang-mutate.template.md fields.md
