Push test results to DataManager on commit.
Update continuous integration to utilize the
'testbot-check' Makefile target on commit
to push test results to the DataManager.
This target no longer depends on the
$GTHOME enviroment variable.

This commit also removes the (now unused)
'runner-check' target and the $(BASEDIR)
Makefile variable.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ build_image:
 test_image:
   stage: test
   script:
-    - docker run $LOCAL_IMAGE_NAME /bin/bash -c "cd clang-mutate && make runner-check"
+    - docker run $LOCAL_IMAGE_NAME /bin/bash -c "cd clang-mutate && make -k testbot-check"
 
 tag_image:
   stage: deploy
