--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,37 +1,33 @@
 DOCKER_REGISTRY_HOST ?= docker.grammatech.com:14850
 
-DOCKER_FLAGS=
-
 BUILD_TAG ?= latest
 BUILD_FROM_TAG ?= $(BUILD_TAG)
 
 FILEPP_OPTIONS = -D __GTD__BUILD_TAG=$(BUILD_TAG) \
-                 -D __GTD__BUILD_FROM_TAG=$(BUILD_FROM_TAG)
+				 -D __GTD__BUILD_FROM_TAG=$(BUILD_FROM_TAG)
 
 IMAGE = clang-mutate
+GTDOCKER_CONFIG = config/GTDockerConfig.h
 
 .PHONY: FORCE
 FORCE:
 
-$(IMAGE): % : %/Dockerfile
-	echo "Making $(LOCAL_IMAGE_NAME)"
-	docker build $(DOCKER_FLAGS) -f $< -t $(LOCAL_IMAGE_NAME) $@
+$(IMAGE): $(IMAGE)/Dockerfile
+	if [ ! -z $(LOCAL_IMAGE_NAME) ]; then \
+		docker build -f $< -t $(LOCAL_IMAGE_NAME) $@; \
+	else \
+		docker build -f $< -t $@ $@; \
+	fi
 
 ## Preproccess Dockerfile.in to Dockerfile
-$(IMAGE)/Dockerfile: $(IMAGE)/Dockerfile.in %/ci_git_repo config
-	filepp -b -lc \\\\ $< -o $@ -I ./config $(FILEPP_OPTIONS)
+$(IMAGE)/Dockerfile: $(IMAGE)/Dockerfile.in $(GTDOCKER_CONFIG)
+	filepp -b -lc \\\\ -e $< -o $@ -I ./config $(FILEPP_OPTIONS)
 	rm -f $@~
 
-## Preproccess Dockerfile.in to Dockerfile
-%/Dockerfile: %/Dockerfile.in config
-	filepp -b -lc \\\\ $< -o $@ -I ./config $(FILEPP_OPTIONS)
-	rm -f $@~
+$(GTDOCKER_CONFIG): FORCE
+	curl https://git.grammatech.com/gt/docker-base/raw/master/docker/config/GTDockerConfig.h > $@
 
-%/ci_git_repo: FORCE
-	mkdir -p $@
-	rsync -av --exclude='/docker' --exclude='.git' $(CI_PROJECT_DIR)/ ./$@
-
-## Ensure that the global docker configuration is in place.
-config: FORCE
-	mkdir -p $@
-	curl https://git.grammatech.com/gt/docker-base/raw/master/docker/config/GTDockerConfig.h > $@/GTDockerConfig.h
+.PHONY: clean
+clean:
+	rm -f $(GTDOCKER_CONFIG)
+	rm -f $(IMAGE)/Dockerfile
