--- a/docker/clang-mutate/Dockerfile.in
+++ b/docker/clang-mutate/Dockerfile.in
@@ -6,9 +6,12 @@ FROM __GTD__MAKE_FROM(synthesis/clang)
 RUN apt_deps=__GTD__CLANG_MUTATE_APT_DEPS && \
     apt-get -y update && apt-get -y install ${apt_deps}
 
+ENV GT_DOCKER_CHOWN_PATHS="$GT_DOCKER_CHOWN_PATHS __GTD__PATH_CLANG_MUTATE_HOME"
+
 RUN mkdir -p __GTD__PATH_CLANG_MUTATE_HOME && \
     git clone git@git.grammatech.com:synthesis/clang-mutate.git __GTD__PATH_CLANG_MUTATE_HOME && \
     cd __GTD__PATH_CLANG_MUTATE_HOME && \
+    git checkout __GTD__CLANG_MUTATE_CHECKOUT && \
     make -j4 clang-mutate && \
     make install
 
