--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,8 +19,8 @@ stages:
           docker pull $DOCKER_REGISTRY/synthesis/clang:latest;
       fi
 
-    - cat Dockerfile.$OS|sed "s/CI_COMMIT_SHA/$CI_COMMIT_SHA/" > Dockerfile.tmp
-    - docker build -f Dockerfile.tmp -t $LOCAL_IMAGE_NAME .
+    - cat Dockerfile.$OS|sed "s/CI_COMMIT_SHA/$CI_COMMIT_SHA/" > Dockerfile
+    - docker build -f Dockerfile -t $LOCAL_IMAGE_NAME .
 
     # If on master branch, push test results to DataManager and push
     # up a new "latest" image, otherwise, run locally.
@@ -33,7 +33,7 @@ stages:
               docker push $DOCKER_REGISTRY/$CI_PROJECT_PATH:latest;
           elif [ "$OS" = "arch" ];
           then
-              docker run -e LOCAL_USER=root $LOCAL_IMAGE_NAME /bin/bash -c "cd /gt/clang-mutate && make check";
+              docker run -e LOCAL_USER=root $LOCAL_IMAGE_NAME /bin/bash -c "cd /gt/clang-mutate && make check-testbot";
               docker tag $LOCAL_IMAGE_NAME $DOCKER_REGISTRY/$CI_PROJECT_PATH:arch;
               docker push $DOCKER_REGISTRY/$CI_PROJECT_PATH:arch;
           else
