Missing "then" in CI file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ stages:
       then
           docker pull $DOCKER_REGISTRY/synthesis/clang:latest;
       elif [ "$OS" = "arch" ];
+      then
           docker pull base/archlinux;
       fi
 
