--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,15 +2,14 @@ variables:
   DOCKER_REGISTRY: "docker.grammatech.com:14850"
   LOCAL_IMAGE_NAME: '$CI_PROJECT_PATH-$CI_PIPELINE_ID'
 
-before_script:
-  - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $DOCKER_REGISTRY
-
 stages:
-  - build-test-and-tag
+  - build-test-and-tag-ubuntu
+  - build-test-and-tag-arch
   - dependents
 
 .run-template: &run
   script:
+    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $DOCKER_REGISTRY
     - if [ "$OS" = "ubuntu" ];
       then
           docker pull $DOCKER_REGISTRY/synthesis/clang:latest;
@@ -30,11 +29,13 @@ stages:
           then
               docker run -e LOCAL_USER=root $LOCAL_IMAGE_NAME /bin/bash -c "cd /gt/clang-mutate && make check-testbot";
               docker tag $LOCAL_IMAGE_NAME $DOCKER_REGISTRY/$CI_PROJECT_PATH:latest;
+              docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $DOCKER_REGISTRY;
               docker push $DOCKER_REGISTRY/$CI_PROJECT_PATH:latest;
           elif [ "$OS" = "arch" ];
           then
               docker run -e LOCAL_USER=root $LOCAL_IMAGE_NAME /bin/bash -c "cd /gt/clang-mutate && make check-testbot";
               docker tag $LOCAL_IMAGE_NAME $DOCKER_REGISTRY/$CI_PROJECT_PATH:arch;
+              docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $DOCKER_REGISTRY;
               docker push $DOCKER_REGISTRY/$CI_PROJECT_PATH:arch;
           else
               docker run -e LOCAL_USER=root $LOCAL_IMAGE_NAME /bin/bash -c "cd /gt/clang-mutate && make check";
@@ -46,14 +47,14 @@ stages:
     # Cleanup
     - docker rmi -f $LOCAL_IMAGE_NAME
 
-run:
-  stage: build-test-and-tag
+run-ubuntu:
+  stage: build-test-and-tag-ubuntu
   variables:
     OS: 'ubuntu'
   <<: *run
 
 run-arch:
-  stage: build-test-and-tag
+  stage: build-test-and-tag-arch
   variables:
     OS: 'arch'
   <<: *run
