Update clang-mutate for clang 6.0
Minor api changes and renaming.

--- a/Dockerfile.arch
+++ b/Dockerfile.arch
@@ -12,16 +12,6 @@ RUN pacman --noconfirm -Syu jshon libxcb
 ENV PATH=$PATH:/usr/synth/bin/ \
     LD_LIBRARY_PATH=/usr/synth/lib/
 
-# Install specific version (4.0.1) of clang/llvm.
-RUN mkdir -p /gt/pkgs && \
-    cd /gt/pkgs && \
-    export PKGS="clang-4.0.1-5-x86_64.pkg.tar.xz clang-tools-extra-4.0.1-5-x86_64.pkg.tar.xz llvm-4.0.1-5-x86_64.pkg.tar.xz llvm-libs-4.0.1-5-x86_64.pkg.tar.xz" && \
-    echo $PKGS|tr ' ' '\n'|xargs -I{} wget http://otsego.grammatech.com/u1/eschulte/share-ro/pkgs/{} && \
-    pacman --noconfirm -U $PKGS
-
-# Don't upgrade clang/llvm packages.
-RUN sed -i '/^#IgnorePkg/ a IgnorePkg = llvm llvm-libs clang clang-tools-extra' /etc/pacman.conf
-
 # Enable makepkg as root.
 RUN sed -i "s/^\(OPT_LONG=(\)/\1'asroot' /;s/EUID == 0/1 == 0/" /usr/bin/makepkg
 
@@ -36,6 +26,16 @@ RUN mkdir -p /gt/bear-git && \
     git clone https://aur.archlinux.org/bear-git.git /gt/bear-git && \
     cd /gt/bear-git && \
     makepkg --asroot --noconfirm -si
+
+# Install specific version (6.0.0) of clang/llvm.
+RUN mkdir -p /gt/pkgs && \
+    cd /gt/pkgs && \
+    export PKGS="clang-6.0.0-1-x86_64.pkg.tar.xz llvm-6.0.0-4-x86_64.pkg.tar.xz llvm-libs-6.0.0-4-x86_64.pkg.tar.xz" && \
+    echo $PKGS|tr ' ' '\n'|xargs -I{} wget http://ftp5.gwdg.de/pub/linux/archlinux/extra/os/x86_64/{} && \
+    pacman --noconfirm -U $PKGS
+
+# Don't upgrade clang/llvm packages.
+RUN sed -i '/^#IgnorePkg/ a IgnorePkg = llvm llvm-libs clang clang-tools-extra' /etc/pacman.conf
 
 # Copy in clang-mutate directory.
 ARG GT
