--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 variables:
   DOCKER_REGISTRY: "docker.grammatech.com:14850"
-  LOCAL_IMAGE_NAME: '$CI_PROJECT_PATH-$CI_PIPELINE_ID'
+  LOCAL_IMAGE_NAME: '$CI_PROJECT_PATH-$CI_PIPELINE_ID-$CI_BUILD_REF_NAME'
 
 stages:
   - build-test-and-tag
@@ -18,7 +18,7 @@ stages:
       fi
 
     - cat Dockerfile.$OS|sed "s/CI_COMMIT_SHA/$CI_COMMIT_SHA/" > Dockerfile
-    - docker build -f Dockerfile -t $LOCAL_IMAGE_NAME .
+    - docker build -f Dockerfile -t ${LOCAL_IMAGE_NAME}-${OS} .
 
     # If on master branch, push test results to DataManager and push
     # up a new "latest" image, otherwise, run locally.
@@ -26,25 +26,25 @@ stages:
       then
           if [ "$OS" = "ubuntu" ];
           then
-              docker run -e LOCAL_USER=root $LOCAL_IMAGE_NAME /bin/bash -c "cd /gt/clang-mutate && make check-testbot";
-              docker tag $LOCAL_IMAGE_NAME $DOCKER_REGISTRY/$CI_PROJECT_PATH:latest;
+              docker run -e LOCAL_USER=root ${LOCAL_IMAGE_NAME}-${OS} /bin/bash -c "cd /gt/clang-mutate && make check-testbot";
+              docker tag ${LOCAL_IMAGE_NAME}-${OS} $DOCKER_REGISTRY/$CI_PROJECT_PATH:latest;
               docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $DOCKER_REGISTRY;
               docker push $DOCKER_REGISTRY/$CI_PROJECT_PATH:latest;
           elif [ "$OS" = "arch" ];
           then
-              docker run -e LOCAL_USER=root $LOCAL_IMAGE_NAME /bin/bash -c "cd /gt/clang-mutate && make check-testbot";
-              docker tag $LOCAL_IMAGE_NAME $DOCKER_REGISTRY/$CI_PROJECT_PATH:arch;
+              docker run -e LOCAL_USER=root ${LOCAL_IMAGE_NAME}-${OS} /bin/bash -c "cd /gt/clang-mutate && make check-testbot";
+              docker tag ${LOCAL_IMAGE_NAME}-${OS} $DOCKER_REGISTRY/$CI_PROJECT_PATH:arch;
               docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $DOCKER_REGISTRY;
               docker push $DOCKER_REGISTRY/$CI_PROJECT_PATH:arch;
           else
-              docker run -e LOCAL_USER=root $LOCAL_IMAGE_NAME /bin/bash -c "cd /gt/clang-mutate && make check";
+              docker run -e LOCAL_USER=root ${LOCAL_IMAGE_NAME}-${OS} /bin/bash -c "cd /gt/clang-mutate && make check";
           fi
       else
-          docker run -e LOCAL_USER=root $LOCAL_IMAGE_NAME /bin/bash -c "cd /gt/clang-mutate && make check";
+          docker run -e LOCAL_USER=root ${LOCAL_IMAGE_NAME}-${OS} /bin/bash -c "cd /gt/clang-mutate && make check";
       fi
 
     # Cleanup
-    - docker rmi -f $LOCAL_IMAGE_NAME
+    - docker rmi -f ${LOCAL_IMAGE_NAME}-${OS}
 
 run-ubuntu:
   stage: build-test-and-tag
