--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 variables:
-  DOCKER_REGISTRY: "docker.grammatech.com:14850"
+  DOCKER_REGISTRY: "docker.grammatech.com"
   LOCAL_IMAGE_NAME: '$CI_PROJECT_PATH-$CI_PIPELINE_ID-$CI_BUILD_REF_NAME'
 
 stages:
